--- a/index.html
+++ b/index.html
@@ -1,10 +1,41 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>My Logistics Company</title>
+  <title>Tirupati Rajasthan Logistic | FTL Services</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    body {margin:0;font-family:Arial;background:#f4f6f8;}
+    header {background:#0b3c5d;color:white;padding:20px;text-align:center;}
+    nav {background:#072f48;padding:10px;text-align:center;}
+    nav a {color:white;margin:0 15px;text-decoration:none;font-weight:bold;}
+    section {padding:40px;text-align:center;}
+    .btn {background:#f57c00;color:white;padding:12px 20px;text-decoration:none;border-radius:5px;}
+    footer {background:#072f48;color:white;text-align:center;padding:15px;}
+  </style>
 </head>
 <body>
-  <h1>Welcome to My FTL Logistics Services</h1>
-  <p>Pan India Full Truck Load Transportation</p>
+
+<header>
+  <h1>TIRUPATI RAJASTHAN LOGISTIC</h1>
+  <p>Reliable Full Truck Load (FTL) Transportation Services</p>
+</header>
+
+<nav>
+  <a href="#">Home</a>
+  <a href="#">Services</a>
+  <a href="#">Contact</a>
+</nav>
+
+<section>
+  <h2>Pan India FTL Transport Solutions</h2>
+  <p>Safe • On-Time • Dedicated Trucks</p>
+  <br>
+  <a class="btn" href="https://wa.me/91XXXXXXXXXX">Get Quote on WhatsApp</a>
+</section>
+
+<footer>
+  <p>© 2026 Tirupati Rajasthan Logistic. All Rights Reserved.</p>
+</footer>
+
 </body>
 </html>
