--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <h2>Pan India FTL Transport Solutions</h2>
   <p>Safe • On-Time • Dedicated Trucks</p>
   <br>
-  <a class="btn" href="https://wa.me/91XXXXXXXXXX">Get Quote on WhatsApp</a>
+  <a class="btn" href="https://wa.me/+918218688654">Get Quote on WhatsApp</a>
 </section>
 
 <footer>
