--- a/index.html
+++ b/index.html
@@ -90,6 +90,11 @@
       padding:20px;
     }
   </style>
+  .logo {
+    width: 180px;   /* size yaha change kar sakte ho */
+    height: auto;
+}
+
 </head>
 
 <body>
