--- a/index.html
+++ b/index.html
@@ -1,136 +1,129 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Tirupati Rajasthan Logistic | FTL Services</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="FTL Transport Services from Shivalik Nagar Haridwar. Chhota Hathi to 40ft Trailer available.">
+<title>Tirupati Rajasthan Logistic</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <style>
-    body {
-      margin:0;
-      font-family:Arial, sans-serif;
-      background:#f4f6f8;
-    }
+<style>
+body {
+    margin: 0;
+    font-family: Arial, sans-serif;
+}
 
-    header {
-      background:#0b3c5d;
-      padding:15px;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-    }
+header {
+    background: #c62828;
+    color: white;
+    padding: 15px 40px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
 
-    header img {
-      height:60px;
-      margin-right:15px;
-    }
+header h1 {
+    margin: 0;
+}
 
-    header h1 {
-      color:white;
-      margin:0;
-      font-size:24px;
-    }
+.hero {
+    background: url('https://images.unsplash.com/photo-1601584115197-04ecc0da31d7?auto=format&fit=crop&w=1600&q=80');
+    height: 500px;
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    text-align: center;
+}
 
-    nav {
-      background:#072f48;
-      padding:12px;
-      text-align:center;
-    }
+.hero h2 {
+    background: rgba(0,0,0,0.6);
+    padding: 20px;
+    border-radius: 10px;
+}
 
-    nav a {
-      color:white;
-      margin:0 15px;
-      text-decoration:none;
-      font-weight:bold;
-    }
+.section {
+    padding: 50px 20px;
+    text-align: center;
+}
 
-    .hero {
-      height:500px;
-      background-image: url('truck.jpg');
-      background-size:cover;
-      background-position:center;
-      display:flex;
-      flex-direction:column;
-      justify-content:center;
-      align-items:center;
-      color:white;
-      text-align:center;
-      background-blend-mode:overlay;
-      background-color:rgba(0,0,0,0.5);
-    }
+.services {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+}
 
-    .hero h2 {
-      font-size:40px;
-      margin-bottom:10px;
-    }
+.card {
+    width: 280px;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+    border-radius: 10px;
+    overflow: hidden;
+}
 
-    .btn {
-      background:#f57c00;
-      padding:14px 25px;
-      color:white;
-      text-decoration:none;
-      border-radius:5px;
-      font-weight:bold;
-    }
+.card img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+}
 
-    .section {
-      padding:50px;
-      text-align:center;
-      background:white;
-      margin:20px auto;
-      max-width:900px;
-      border-radius:8px;
-      box-shadow:0 0 10px rgba(0,0,0,0.1);
-    }
+.card h3 {
+    padding: 10px;
+}
 
-    footer {
-      background:#072f48;
-      color:white;
-      text-align:center;
-      padding:20px;
-    }
-  </style>
+footer {
+    background: #222;
+    color: white;
+    padding: 20px;
+    text-align: center;
+}
+</style>
 </head>
 
 <body>
 
 <header>
-  <img src="logo.png" alt="Company Logo">
-  <h1>TIRUPATI RAJASTHAN LOGISTIC</h1>
+    <h1>Tirupati Rajasthan Logistic</h1>
+    <div>📞 WhatsApp: 918218688654</div>
 </header>
 
-<nav>
-  <a href="#">Home</a>
-  <a href="#services">Services</a>
-  <a href="#fleet">Fleet</a>
-  <a href="#contact">Contact</a>
-</nav>
+<div class="hero">
+    <h2>FTL Transport Services Across India<br>
+    From Chhota Hathi to 40FT Trailer</h2>
+</div>
 
-<section class="hero">
-  <h2>Pan India FTL Transport Solutions</h2>
-  <p>Safe • On-Time • Dedicated Vehicles</p>
-  <br>
-  <a class="btn" href="https://wa.me/91XXXXXXXXXX">Get Quote on WhatsApp</a>
-</section>
+<div class="section">
+    <h2>Our Services</h2>
+    <div class="services">
 
-<section id="services" class="section">
-  <h2>Our Services</h2>
-  <p>Industrial Goods, FMCG, Machinery & All Goods (Except Scrap)</p>
-</section>
+        <div class="card">
+            <img src="https://images.unsplash.com/photo-1600523323450-4b71b6c8c7f4?auto=format&fit=crop&w=800&q=80">
+            <h3>Chhota Hathi</h3>
+        </div>
 
-<section id="fleet" class="section">
-  <h2>Our Fleet</h2>
-  <p>Chhota Hathi to 40ft Trailer | Open & Closed Body</p>
-</section>
+        <div class="card">
+            <img src="https://images.unsplash.com/photo-1586528116311-ad8dd3c8310d?auto=format&fit=crop&w=800&q=80">
+            <h3>Container Trucks</h3>
+        </div>
 
-<section id="contact" class="section">
-  <h2>Contact Us</h2>
-  <p>Shivalik Nagar, Haridwar, Uttarakhand</p>
-  <a class="btn" href="https://wa.me/918218688654">WhatsApp Now</a>
-</section>
+        <div class="card">
+            <img src="https://images.unsplash.com/photo-1590502593747-42a996133562?auto=format&fit=crop&w=800&q=80">
+            <h3>40 FT Trailer</h3>
+        </div>
+
+    </div>
+</div>
+
+<div class="section">
+    <h2>About Us</h2>
+    <p>
+        Address: Shivalik Nagar, Haridwar<br>
+        We provide all types of transport services except scrap.<br>
+        Safe, Fast & Reliable Delivery.
+    </p>
+</div>
 
 <footer>
-  <p>© 2026 Tirupati Rajasthan Logistic | All Rights Reserved</p>
+    © 2026 Tirupati Rajasthan Logistic | All Rights Reserved
 </footer>
 
 </body>
